Work on getting tests working after adding settings functionality.